--- a/endnote.bib
+++ b/endnote.bib
@@ -254,7 +254,7 @@ http://dx.doi.org/10.18637/jss.v080.i01},
    type = {Journal Article}
 }
 
-﻿@misc{RN15994,
+﻿@misc{Rousselet_2019,
    author = {Rousselet, Guillaume A and Wilcox, Rand R}
    title = {Reaction times and other skewed distributions: problems with the mean and the median}
    DOI= {10.1101/383935},
